--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
           <div class="dot tomato-dot"></div>
           <div class="dot black-dot"></div>
         </div>
-        <button class="action-btn headphone-btn">Add to chart</button>
+        <button class="headphone-btn action-btn">Add to chart</button>
+        <button class="headphone-btn-sm">Add to chart</button>
       </div>
     </div>
   </body>
 </html>
+
